--- a/Tabang-Hub/Tabang-Hub/Views/Organization/Reports.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Organization/Reports.cshtml
@@ -31,7 +31,7 @@
                                     </div>
                                 </div>
                                 <div class="col-9 col-md-8">
-                                    <h6 class="text-muted font-semibold">Followers</h6>
+                                    <h6 class="text-muted font-semibold">Total Events</h6>
                                     <h6 class="font-extrabold mb-0">183.000</h6>
                                 </div>
                             </div>
@@ -48,7 +48,7 @@
                                     </div>
                                 </div>
                                 <div class="col-9 col-md-8">
-                                    <h6 class="text-muted font-semibold">Following</h6>
+                                    <h6 class="text-muted font-semibold">Total Donation</h6>
                                     <h6 class="font-extrabold mb-0">80.000</h6>
                                 </div>
                             </div>
@@ -65,7 +65,7 @@
                                     </div>
                                 </div>
                                 <div class="col-9 col-md-8">
-                                    <h6 class="text-muted font-semibold">Saved Post</h6>
+                                    <h6 class="text-muted font-semibold">Total Volunteer</h6>
                                     <h6 class="font-extrabold mb-0">112</h6>
                                 </div>
                             </div>
@@ -77,7 +77,7 @@
                 <div class="col-12">
                     <div class="card">
                         <div class="card-header">
-                            <h4>Profile Visit</h4>
+                            <h4>Monthly Event Summary</h4>
                         </div>
                         <div class="card-body">
                             <div id="chart-profile-visit"></div>
@@ -89,60 +89,10 @@
                 <div class="col-12 col-xl-4">
                     <div class="card">
                         <div class="card-header">
-                            <h4>Profile Visit</h4>
+                            <h4>Top 5 Skills</h4>
                         </div>
                         <div class="card-body">
-                            <div class="row">
-                                <div class="col-6">
-                                    <div class="d-flex align-items-center">
-                                        <svg class="bi text-primary" width="32" height="32" fill="blue"
-                                             style="width:10px">
-                                            <use xlink:href="~/Content/vendors/bootstrap-icons/bootstrap-icons.svg#circle-fill" />
-                                        </svg>
-                                        <h5 class="mb-0 ms-3">Europe</h5>
-                                    </div>
-                                </div>
-                                <div class="col-6">
-                                    <h5 class="mb-0">862</h5>
-                                </div>
-                                <div class="col-12">
-                                    <div id="chart-europe"></div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-6">
-                                    <div class="d-flex align-items-center">
-                                        <svg class="bi text-success" width="32" height="32" fill="blue"
-                                             style="width:10px">
-                                            <use xlink:href="~/Content/vendors/bootstrap-icons/bootstrap-icons.svg#circle-fill" />
-                                        </svg>
-                                        <h5 class="mb-0 ms-3">America</h5>
-                                    </div>
-                                </div>
-                                <div class="col-6">
-                                    <h5 class="mb-0">375</h5>
-                                </div>
-                                <div class="col-12">
-                                    <div id="chart-america"></div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-6">
-                                    <div class="d-flex align-items-center">
-                                        <svg class="bi text-danger" width="32" height="32" fill="blue"
-                                             style="width:10px">
-                                            <use xlink:href="~/Content/vendors/bootstrap-icons/bootstrap-icons.svg#circle-fill" />
-                                        </svg>
-                                        <h5 class="mb-0 ms-3">Indonesia</h5>
-                                    </div>
-                                </div>
-                                <div class="col-6">
-                                    <h5 class="mb-0">1025</h5>
-                                </div>
-                                <div class="col-12">
-                                    <div id="chart-indonesia"></div>
-                                </div>
-                            </div>
+                            <div id="chart-visitors-profile"></div>
                         </div>
                     </div>
                 </div>
@@ -215,7 +165,7 @@
             </div>
             <div class="card">
                 <div class="card-header">
-                    <h4>Recent Messages</h4>
+                    <h4>Recent Events</h4>
                 </div>
                 <div class="card-content pb-4">
                     <div class="recent-message d-flex px-4 py-3">
@@ -223,8 +173,8 @@
                             <img src="~/Content/images1/faces/4.jpg">
                         </div>
                         <div class="name ms-4">
-                            <h5 class="mb-1">Hank Schrader</h5>
-                            <h6 class="text-muted mb-0">johnducky</h6>
+                            <h5 class="mb-1">Tabang Tulong</h5>
+                            <h6 class="text-muted mb-0">Help</h6>
                         </div>
                     </div>
                     <div class="recent-message d-flex px-4 py-3">
@@ -232,8 +182,8 @@
                             <img src="~/Content/images1/faces/5.jpg">
                         </div>
                         <div class="name ms-4">
-                            <h5 class="mb-1">Dean Winchester</h5>
-                            <h6 class="text-muted mb-0">imdean</h6>
+                            <h5 class="mb-1">Tulongan</h5>
+                            <h6 class="text-muted mb-0">Natin</h6>
                         </div>
                     </div>
                     <div class="recent-message d-flex px-4 py-3">
@@ -241,24 +191,62 @@
                             <img src="~/Content/images1/faces/1.jpg">
                         </div>
                         <div class="name ms-4">
-                            <h5 class="mb-1">John Dodol</h5>
-                            <h6 class="text-muted mb-0">dodoljohn</h6>
+                            <h5 class="mb-1">Tabang</h5>
+                            <h6 class="text-muted mb-0">Nurse</h6>
                         </div>
                     </div>
-                    <div class="px-4">
-                        <button class='btn btn-block btn-xl btn-light-primary font-bold mt-3'>
-                            Start
-                            Conversation
-                        </button>
+                    <div class="recent-message d-flex px-4 py-3">
+                        <div class="avatar avatar-lg">
+                            <img src="~/Content/images1/faces/1.jpg">
+                        </div>
+                        <div class="name ms-4">
+                            <h5 class="mb-1">Tabang</h5>
+                            <h6 class="text-muted mb-0">Nurse</h6>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="card">
                 <div class="card-header">
-                    <h4>Visitors Profile</h4>
+                    <h4>Recent Donators</h4>
                 </div>
                 <div class="card-body">
-                    <div id="chart-visitors-profile"></div>
+                    <div class="recent-message d-flex px-4 py-3">
+                        <div class="avatar avatar-lg">
+                            <img src="~/Content/images1/faces/4.jpg">
+                        </div>
+                        <div class="name ms-4">
+                            <h5 class="mb-1">Tabang Tulong</h5>
+                            <h6 class="text-muted mb-0">Help</h6>
+                        </div>
+                    </div>
+                    <div class="recent-message d-flex px-4 py-3">
+                        <div class="avatar avatar-lg">
+                            <img src="~/Content/images1/faces/5.jpg">
+                        </div>
+                        <div class="name ms-4">
+                            <h5 class="mb-1">Tulongan</h5>
+                            <h6 class="text-muted mb-0">Natin</h6>
+                        </div>
+                    </div>
+                    <div class="recent-message d-flex px-4 py-3">
+                        <div class="avatar avatar-lg">
+                            <img src="~/Content/images1/faces/1.jpg">
+                        </div>
+                        <div class="name ms-4">
+                            <h5 class="mb-1">Tabang</h5>
+                            <h6 class="text-muted mb-0">Nurse</h6>
+                        </div>
+                    </div>
+                    <div class="recent-message d-flex px-4 py-3">
+                        <div class="avatar avatar-lg">
+                            <img src="~/Content/images1/faces/1.jpg">
+                        </div>
+                        <div class="name ms-4">
+                            <h5 class="mb-1">Tabang</h5>
+                            <h6 class="text-muted mb-0">Nurse</h6>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
