--- a/Tabang-Hub/Tabang-Hub/Views/Volunteer/EventDetails.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Volunteer/EventDetails.cshtml
@@ -182,7 +182,7 @@
                     @foreach (var orgDetails in Model.orgEvents)
                     {
                         <button style="width: 100%" onclick="applyEvent('@orgDetails.eventId')" class="btn btn-primary btn-block">
-                            Apply now
+                            Join now
                         </button>
                         if (orgDetails.targetAmount != null)
                         {
