--- a/Tabang-Hub/Tabang-Hub/Views/Shared/_Layout.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Shared/_Layout.cshtml
@@ -183,7 +183,7 @@
                         <p class="text-white d-flex mb-2">
                             <i class="bi-telephone me-2"></i>
 
-                            <a href="tel: 120-240-9600" class="site-footer-link">
+                            <a href="#" class="site-footer-link">
                                 120-240-9600
                             </a>
                         </p>
@@ -207,7 +207,7 @@
             </div>
 
             <div class="site-footer-bottom">
-                <div class="container">
+                @*<div class="container">
                     <div class="row">
 
                         <div class="col-lg-6 col-md-7 col-12">
@@ -242,7 +242,7 @@
                         </div>
 
                     </div>
-                </div>
+                </div>*@
             </div>
         </footer>
     }
